# cmd/server/main.go
@@ -40,7 +40,11 @@ import (
 //	@host		localhost:9060
 //	@BasePath	/
 
-//	@schemes	http https
+//	@schemes					http https
+//	@securityDefinitions.apikey	BearerAuth
+//	@in							header
+//	@name						Authorization
+//	@description				Type "Bearer" followed by a space and JWT token.
 
 var Version string
 
